@@ -1,3 +1,6 @@
+25 February 2014: Matthijs
+- OPENDNSSEC-544: Fix assertion error that happens on a IXFR + EDNS request.
+
 14 February 2014: Matthijs
 - Set NSEC3 on empty non-terminals to unsigned delegations: To be compatible
   with validators that do not implement RFC 5155 Errata 3441 [OPENDNSSEC-549].
